# interop-fable-rust

./: .babelrc  .gitignore  Cargo.toml  LICENSE  README.md  build.cmd  fableconfig.json  lib.rs  library.fsx  main.rs  package.json  rust.cmd  watch.cmd  webpack.config.js
fable/: library.fs  library.fsproj  library.fsx  types.fs  ui.fs
public/: index.html  lib.js
src/: main.rs
